gobmkida/c2/sgfAddPlayLast
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/sgfAddPlayLast/src/sgf/sgfnode.c:937:12: error: expected expression
*( _OWORD *)&v4->child = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/sgfAddPlayLast/src/sgf/sgfnode.c:937:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v4->child = 0LL; 
   ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/sgfAddPlayLast/src/sgf/sgfnode.c:938:12: error: expected expression
*( _OWORD *)&v4->props = 0LL; 
           ^
/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/sgfAddPlayLast/src/sgf/sgfnode.c:938:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&v4->props = 0LL; 
   ^
4 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/clang/O2/gobmk-clang-O2/sgfAddPlayLast/src/obj/4/sgfnode.o] Error 1
